Use HLS video with VTT captions

--- a/app/views/videos/index.html.erb
+++ b/app/views/videos/index.html.erb
@@ -1,4 +1,4 @@
-<media-player title="Sprite Fight" src="https://stream.mux.com/VZtzUzGRv02OhRnZCxcNg49OilvolTqdnFLEqBsTwaxU/low.mp4">
+<media-player title="Sprite Fight" src="https://player.vimeo.com/external/883181011.m3u8?s=2b8356466aafd574171ab9e669ea52575887b041&logging=false">
   <media-provider></media-provider>
   <media-video-layout thumbnails="https://image.mux.com/VZtzUzGRv02OhRnZCxcNg49OilvolTqdnFLEqBsTwaxU/storyboard.vtt"></media-video-layout>
 </media-player>
